Added trending section to the project

--- a/css/sections/trending.css
+++ b/css/sections/trending.css
@@ -1,85 +1,160 @@
-.subscription {
-    padding: 64px;
-  
-    background-color: var(--primary-color);
-    background-image: url('../../assets/subscribe_bg.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-  
-    flex-direction: column;
-    overflow: hidden;
-  }
-  
-  .subscription h2 {
-    font-size: 88px;
-    font-family: var(--playfair-display);
-    font-weight: 600;
-    line-height: 123px;
-  
-    color: #fff;
-    text-align: center;
-  }
-  
-  .subscription p {
-    font-size: 18px;
-    font-family: var(--plus-jakarta-sans);
-    font-weight: 300;
-    line-height: 36px;
-  
-    margin-top: 32px;
-  
-    color: rgba(255, 255, 255, 0.8);
-  }
-  
-  .subscription__form {
-    min-width: 480px;
-    margin-top: 40px;
-  
-    padding: 14px 14px 14px 24px;
-  
-    display: flex;
-    gap: 10px;
-  
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 46px;
-  }
-  
-  .subscription__form input {
-    flex: 1;
-  
-    font-size:  16px;
-    font-weight: 400px;
-    font-family: var(--plus-jakarta-sans);
-  
-    color: #fff;
-    opacity: 0.5;
-  
-    background: transparent;
-    border: none;
-    outline: none;
-  }
-  
-  .subscription__form input::placeholder {
-    color: #fff;
-    opacity: 0.5;
-  }
-  
-  .subscription__form button {
-    padding: 20px;
-  
-    min-width: 180px;
-  
-    font-size: 16px;
-    font-weight: 500;
-    font-family: var(--plus-jakarta-sans);
-    color: #fff;
-    text-align: center;
-  
-    background: var(--black-400);
-    border-radius: 46px;
-    border: none;
-    outline: none;
-  
-    cursor: pointer;
-  }
+.trending {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.trending__discover {
+  position: absolute;
+  top: 44%;
+  left: 44%;
+  z-index: 1;
+
+  width: 160px;
+  height: 160px;
+
+  border-radius: 100%;
+  background-color: var(--secondary-color);
+  cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.trending__discover p {
+  font-size: 18px;
+  font-weight: 500;
+  font-family: var(--plus-jakarta-sans);
+
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.trending-sushi,
+.trending-drinks {
+  width: 100%;
+  min-height: 640px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.trending__content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  padding: 32px 64px;
+}
+
+.trending__list {
+  list-style: none;
+
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.trending__list li {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 12px;
+
+  min-width: 210px;
+}
+
+.trending__icon {
+  width: 24px;
+  height: 24px;
+
+  border-radius: 100%;
+  background-color: var(--primary-color);
+}
+
+.trending__icon img {
+  width: 50%;
+  height: 50%;
+  object-fit: contain;
+}
+
+.trending__list p {
+  flex: 1;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: var(--plus-jakarta-sans);
+
+  color: var(--secondary-color);
+}
+
+.trending__image {
+  flex: 1;
+
+  position: relative;
+  padding: 32px 64px;
+
+  background-color: var(--color-white);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.trending-sushi .trending__image {
+  background-image: url("../../assets/japanese_sushi.png");
+}
+
+.trending-drink .trending__image {
+  background-image: url("../../assets/japanese_drinks.png");
+}
+
+.trending__image img {
+  width: 254px;
+  height: 260px;
+  object-fit: contain;
+}
+
+/* Arrows */
+.trending__arrow {
+  position: absolute;
+  z-index: 1;
+}
+
+.trending__arrow img {
+  object-fit: contain;
+}
+
+.trending__arrow-left {
+  left: -2.5px;
+  top: 12%;
+}
+
+.trending__arrow-left img,
+.trending__arrow-top img {
+  width: auto;
+  height: 100%;
+}
+
+.trending__arrow-top {
+  top: -10.5px;
+  left: 12%;
+}
+
+.trending__arrow-bottom {
+  bottom: -6.5px;
+  right: 12%;
+}
+
+.trending__arrow-bottom img,
+.trending__arrow-right img {
+  width: 100%;
+  height: auto;
+}
+
+.trending__arrow-right {
+  right: -2.5px;
+  bottom: 12%;
+}
